[package]
name = "rfinger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
aws-config = "1.6.2"
aws-sdk-s3 = "1.85.0"
crypto = "0.5.1"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["serde_derive"] }
