[package]
name = "rfinger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
aws-config = "1.6.2"
aws-sdk-s3 = "1.85.0"
crypto = "0.5.1"
derive_more = { version = "2.0.1", features = ["display"] }
env_logger = "0.11.8"
image = "0.25.6"
jsonwebtoken = "9.3.1"
log = "0.4.27"
openidconnect = "4.0.0"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
webp = "0.3.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
aws-smithy-runtime-api = "1.9.0"
aws-smithy-types = "1.3.2"
